--- a/layout/header_footer.html
+++ b/layout/header_footer.html
@@ -1,77 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/5f6a4cb49b.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./header_footer.css">
-</head>
-<body>
-
-
-
+    <script
+      src="https://kit.fontawesome.com/5f6a4cb49b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./header_footer.css" />
+  </head>
+  <body>
     <header>
-        <nav class="header__nav">
-            <a href="#" class="header__a">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Trello-logo-blue.svg/2560px-Trello-logo-blue.svg.png" alt="" class="header__logo">
-            </a>
-            <input type="checkbox" class="header__check" id="check">
-            <label for="check" class="header__checkbtn">
-                <i class="fa-solid fa-bars"></i>
-            </label>
-            <ul class="header__ul">
-                <li class="header__li"><a href="" class="header__a">Features</a></li>
-                <li class="header__li"><a href="" class="header__a">Solutions</a></li>
-                <li class="header__li"><a href="" class="header__a">Plans</a></li>
-                <li class="header__li"><a href="" class="header__a">Pricing</a></li>
-                <li class="header__li"><a href="" class="header__a">Resources</a></li>
-                <li><button></button></li>
-                <li><button></button></li>
-            </ul>
-        </nav>
+      <nav class="header__nav">
+        <a href="#" class="header__a">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Trello-logo-blue.svg/2560px-Trello-logo-blue.svg.png"
+            alt=""
+            class="header__logo"
+          />
+        </a>
+        <input type="checkbox" class="header__check" id="check" />
+        <label for="check" class="header__checkbtn">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+        <ul class="header__ul">
+          <li class="header__li"><a href="" class="header__a">Features</a></li>
+          <li class="header__li"><a href="" class="header__a">Solutions</a></li>
+          <li class="header__li"><a href="" class="header__a">Plans</a></li>
+          <li class="header__li"><a href="" class="header__a">Pricing</a></li>
+          <li class="header__li"><a href="" class="header__a">Resources</a></li>
+          <li><button></button></li>
+          <li><button></button></li>
+        </ul>
+      </nav>
     </header>
 
-
-
     <footer class="footer">
-        <section class="footer_section">
-            <div class="footer_section__up">
-                <div class="footer__div">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Trello-logo-blue.svg/2560px-Trello-logo-blue.svg.png" alt="" class="footer__logo">
-                    <a href="#" class="redes">Log in</a>
-                </div>
-                <div class="footer__div">
-                    <ul class="footer__ul">
-                        <li class="footer__li"><a class="redes" href="#">About Trello</a></li>
-                        <li class="footer__li"><a class="redes" href="#">Jobs</a></li>
-                        <li class="footer__li"><a class="redes" href="#">Apps</a></li>
-                        <li class="footer__li"><a class="redes" href="#">Ingerations</a></li>
-                        <li class="footer__li"><a class="redes" href="#">Contact us</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section class="footer__section">
-            <div class="footer_section__down">
-                <div class="footer__div__center">
-                    <ul class="footer__ul">
-                        <li class="footer__li"><a class="redes" href="#">Privacy Policy</a></li>
-                        <li class="footer__li"><a class="redes" href="#">Terms</a></li>
-                        <li class="footer__li"><a class="redes" href="#">Cookie Settings</a></li>
-                        <li class="footer__li"><a class="redes" href="#">Copiright 2022 Atlassian</a></li>
-                    </ul>
-                </div>
-                <div class="footer__div__down">
-                    <a class="redes" href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a class="redes" href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a class="redes" href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a class="redes" href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a class="redes" href="#"><i class="fa-brands fa-youtube"></i></a>
-                </div>
-            </div>
-        </section>
+      <section class="footer_section">
+        <div class="footer_section__up">
+          <div class="footer__div">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Trello-logo-blue.svg/2560px-Trello-logo-blue.svg.png"
+              alt=""
+              class="footer__logo"
+            />
+            <a href="#" class="redes">Log in</a>
+          </div>
+          <div class="footer__div">
+            <ul class="footer__ul">
+              <li class="footer__li">
+                <a class="redes" href="#">About Trello</a>
+              </li>
+              <li class="footer__li"><a class="redes" href="#">Jobs</a></li>
+              <li class="footer__li"><a class="redes" href="#">Apps</a></li>
+              <li class="footer__li">
+                <a class="redes" href="#">Ingerations</a>
+              </li>
+              <li class="footer__li">
+                <a class="redes" href="#">Contact us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="footer__section">
+        <div class="footer_section__down">
+          <div class="footer__div__center">
+            <ul class="footer__ul">
+              <li class="footer__li">
+                <a class="redes" href="#">Privacy Policy</a>
+              </li>
+              <li class="footer__li"><a class="redes" href="#">Terms</a></li>
+              <li class="footer__li">
+                <a class="redes" href="#">Cookie Settings</a>
+              </li>
+              <li class="footer__li">
+                <a class="redes" href="#">Copiright 2022 Atlassian</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__div__down">
+            <a class="redes" href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a class="redes" href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a class="redes" href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a class="redes" href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a class="redes" href="#"><i class="fa-brands fa-youtube"></i></a>
+          </div>
+        </div>
+      </section>
     </footer>
-</body>
+  </body>
 </html>
