--- a/layout/signup.html
+++ b/layout/signup.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>singup</title>
-    <link rel="stylesheet" href="signup.css">
-</head>
-<body>
-    <header class="signup__header"> <img class="signup__header__logo"  src="..\media\trello.png" alt=""></header>
-   <div class="signup">
-    <h1>Sign up for your account</h1>
-    <input class="signup__email "type="email" name="email" value placeholder= " Enter email">
-    <p class="signup__politics">By signing up, you confirm that you've read and accepted our <a href="">Terms of Service</a> and <a href="">Privacy Policy</a>.</p>
-    <button class="signup__button"><b>Continue</b> </button>
-    <p>OR</p>
-    <div class="signup__with">
-    <button class="signup__with__button"> <img class="signup__with__img" src="..\media\google.png" alt=""> <b>Continue with Google</b> </button>
-    <button class="signup__with__button"> <img class="signup__with__img" src="..\media\microsoft.png" alt=""> <b>Continue with Microsoft</b> </button>
-    <button class="signup__with__button"> <img class="signup__with__img" src="..\media\apple.png" alt=""> <b>Continue with Apple</b> </button>
+    <link rel="stylesheet" href="signup.css" />
+  </head>
+  <body>
+    <header class="signup__header">
+      <img class="signup__header__logo" src="..\media\trello.png" alt="" />
+    </header>
+    <div class="signup">
+      <h1>Sign up for your account</h1>
+      <input
+        class="signup__email"
+        type="email"
+        name="email"
+        value
+        placeholder=" Enter email"
+      />
+      <p class="signup__politics">
+        By signing up, you confirm that you've read and accepted our
+        <a href="">Terms of Service</a> and <a href="">Privacy Policy</a>.
+      </p>
+      <button class="signup__button"><b>Continue</b></button>
+      <p>OR</p>
+      <div class="signup__with">
+        <button class="signup__with__button">
+          <img class="signup__with__img" src="..\media\google.png" alt="" />
+          <b>Continue with Google</b>
+        </button>
+        <button class="signup__with__button">
+          <img class="signup__with__img" src="..\media\microsoft.png" alt="" />
+          <b>Continue with Microsoft</b>
+        </button>
+        <button class="signup__with__button">
+          <img class="signup__with__img" src="..\media\apple.png" alt="" />
+          <b>Continue with Apple</b>
+        </button>
+      </div>
+      <hr />
+      <a href="">Already have an account? Log In</a>
     </div>
-    <hr>
-    <a href="">Already have an account? Log In</a>
 
-   </div>
-   
-   <div class="signup__language">
-   <select name="Language Picker" class="signup__language-picker">
-    <option value="">Select your language…</option>
-    <option value="">English</option>
-    <option value="">Español</option>
-    <option value="">Français</option>
-    <option value="">Italiano</option>
-    <option value="">Türkçe</option>
-    <option value="">ภาษาไทย</option>
-    <option value="">Українська</option>    
-   </select>
+    <div class="signup__language">
+      <select name="Language Picker" class="signup__language-picker">
+        <option value="">Select your language…</option>
+        <option value="">English</option>
+        <option value="">Español</option>
+        <option value="">Français</option>
+        <option value="">Italiano</option>
+        <option value="">Türkçe</option>
+        <option value="">ภาษาไทย</option>
+        <option value="">Українська</option>
+      </select>
     </div>
-</body>
+  </body>
 </html>
