--- a/src/styles/components/_NavBar.scss
+++ b/src/styles/components/_NavBar.scss
@@ -10,21 +10,21 @@
 //   background-color: #293856;
 // }
 
-.header__nav{
+.header__nav {
   background: #ffffff;
   height: 100px;
   width: 100%;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   align-items: center;
 }
 
-.header__logo{
+.header__logo {
   margin-left: 30px;
   height: 40px;
 }
 
-.header__ul{
+.header__ul {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -32,50 +32,48 @@
   top: 100px;
   text-align: center;
   right: -100%;
-  transition: all .5s;
+  transition: all 0.5s;
 }
-.header__li{
+.header__li {
   display: block;
-  margin: 50px ,0;
+  margin: 50px, 0;
   line-height: 30px;
   font-size: 30px;
   padding-top: 60px;
 }
-.header__li :hover{
+.header__li :hover {
   display: block;
   background-color: dimgray;
   color: #ffffff;
 }
-.header__check{
+.header__check {
   display: none;
 }
 
-.header__checkbtn{
+.header__checkbtn {
   font-size: 30px;
   margin-right: 40px;
   cursor: pointer;
 }
-.header__checkbtn :hover{
+.header__checkbtn :hover {
   background-color: dimgray;
 }
 
 @media (min-width: 768px) {
-  .header__checkbtn{
-      display: none;
+  .header__checkbtn {
+    display: none;
   }
-  .header__ul{
-
-      //flex-basis: 15%;
-      justify-content: right;
-      position:static;
-      display: flex;
-      top: 100px;
-      height:fit-content;
+  .header__ul {
+    //flex-basis: 15%;
+    justify-content: right;
+    position: static;
+    display: flex;
+    top: 100px;
+    height: fit-content;
   }
-  .header__li{
-      padding: 1.2%;
-      font-size: 1rem;
-      margin: 1px;
+  .header__li {
+    padding: 1.2%;
+    font-size: 1rem;
+    margin: 1px;
   }
-
 }
