--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -30,20 +30,21 @@
   padding: 10px;
   height: 600px;
   max-width: 350px;
-  text-align:center;
-  background-color: #FFFFFF;
+  text-align: center;
+  background-color: #ffffff;
   padding: 25px 40px;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
   margin-bottom: auto;
   justify-content: space-around;
-  font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+  font-family: '-apple-system', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
   text-align: center;
-  color: #5E6C84;
+  color: #5e6c84;
   font-size: 16px;
   letter-spacing: -0.01em;
   line-height: 28px;
@@ -52,46 +53,46 @@ h1 {
 }
 
 .login__email {
-  width:100%;
+  width: 100%;
   height: 44px;
   margin-top: 20px;
   margin-bottom: 10px;
   font-size: 12px;
   line-height: 16px;
-  color: #5E6C84;
-  background-color: #F9FAFC;
+  color: #5e6c84;
+  background-color: #f9fafc;
   font: inherit;
-  border: 2px solid #DFE1E6;
+  border: 2px solid #dfe1e6;
   border-radius: 5px;
   box-sizing: border-box;
 }
 
 .login__email:focus {
   outline: none;
-  border:1px solid rgb(15, 74, 223);
-  box-shadow: 0 0 10px #719ECE;
+  border: 1px solid rgb(15, 74, 223);
+  box-shadow: 0 0 10px #719ece;
   transition-duration: 0.4s;
 }
 
 .login__password {
-  width:100%;
+  width: 100%;
   height: 44px;
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 12px;
   line-height: 16px;
-  color: #5E6C84;
-  background-color: #F9FAFC;
+  color: #5e6c84;
+  background-color: #f9fafc;
   font: inherit;
-  border: 2px solid #DFE1E6;
+  border: 2px solid #dfe1e6;
   border-radius: 5px;
   box-sizing: border-box;
 }
 
 .login__password:focus {
   outline: none;
-  border:1px solid rgb(15, 74, 223);
-  box-shadow: 0 0 10px #719ECE;
+  border: 1px solid rgb(15, 74, 223);
+  box-shadow: 0 0 10px #719ece;
   transition-duration: 0.4s;
 }
 
@@ -99,7 +100,7 @@ h1 {
   display: flex;
   justify-content: center;
   font-size: 15px;
-  color: #0052CC;
+  color: #0052cc;
   max-width: 350px;
   margin-left: auto;
   margin-right: auto;
@@ -117,11 +118,11 @@ h1 {
 
 .login__button {
   color: rgb(255, 255, 255);
-  width:100%;
+  width: 100%;
   height: 8%;
   font: inherit;
   border: none;
-  background-color: #5AAC44;
+  background-color: #5aac44;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -137,7 +138,7 @@ h1 {
 }
 
 .login__with__button {
-  width:100%;
+  width: 100%;
   margin-top: 10px;
   margin-bottom: 10px;
   font: inherit;
@@ -147,9 +148,9 @@ h1 {
   padding: 5px;
   align-items: center;
   border-radius: 5px;
-  text-align:center;
-  vertical-align:middle;
-  color: #5E6C84;
+  text-align: center;
+  vertical-align: middle;
+  color: #5e6c84;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -171,7 +172,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid hsl(0,0%,80%);
+  border-top: 1px solid hsl(0, 0%, 80%);
   margin: 2em;
 }
 
@@ -191,13 +192,13 @@ hr {
 
 .login__language-picker {
   background: none;
-  border: 2px solid #EDEFF0;
+  border: 2px solid #edeff0;
   height: 50px;
   padding: 0.5em;
 }
 
 a {
-  color: #0052CC;
+  color: #0052cc;
   text-decoration: none;
 }
 
@@ -206,7 +207,7 @@ a {
   justify-content: center;
   margin-top: 5px;
   font-size: 15px;
-  color: #0052CC;
+  color: #0052cc;
 }
 
 ul {
@@ -242,7 +243,7 @@ li {
 
 @media (min-width: 640px) {
   .login {
-    background-color: #F9FAFC;
+    background-color: #f9fafc;
     position: relative;
     z-index: 0;
     min-height: 100vh;
@@ -256,8 +257,8 @@ li {
     padding: 10px;
     height: 600px;
     max-width: 350px;
-    text-align:center;
-    background-color: #FFFFFF;
+    text-align: center;
+    background-color: #ffffff;
     border-radius: 3px;
     padding: 25px 40px;
     box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
@@ -266,31 +267,32 @@ li {
     margin-top: auto;
     margin-bottom: auto;
     justify-content: space-around;
-    font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-}
-.login__header__logo {
-  margin-bottom: 40px;
-}
-.login__footer__img {
-  display: inline;
-  visibility: visible;
-}
-.login__footer__img1 {
-  z-index: -1;
-  position: fixed;
-  bottom: 0px;
-  left: 5px;
-  height: 200px;
-  width: 200px;
-}
-.login__footer__img2 {
-  z-index: -1;
-  position: fixed;
-  bottom: 0px;
-  right: 5px;
-  height: 200px;
-  width: 200px;
-}
+    font-family: '-apple-system', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  }
+  .login__header__logo {
+    margin-bottom: 40px;
+  }
+  .login__footer__img {
+    display: inline;
+    visibility: visible;
+  }
+  .login__footer__img1 {
+    z-index: -1;
+    position: fixed;
+    bottom: 0px;
+    left: 5px;
+    height: 200px;
+    width: 200px;
+  }
+  .login__footer__img2 {
+    z-index: -1;
+    position: fixed;
+    bottom: 0px;
+    right: 5px;
+    height: 200px;
+    width: 200px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -303,4 +305,3 @@ li {
     width: 350px;
   }
 }
-
