--- a/src/styles/pages/signup.scss
+++ b/src/styles/pages/signup.scss
@@ -29,20 +29,21 @@
   padding: 10px;
   height: 520px;
   max-width: 350px;
-  text-align:center;
-  background-color: #FFFFFF;
+  text-align: center;
+  background-color: #ffffff;
   padding: 25px 40px;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
   margin-bottom: auto;
   justify-content: space-around;
-  font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+  font-family: '-apple-system', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 
 h1 {
   text-align: center;
-  color: #5E6C84;
+  color: #5e6c84;
   font-size: 16px;
   letter-spacing: -0.01em;
   line-height: 28px;
@@ -51,39 +52,39 @@ h1 {
 }
 
 .signup__email {
-  width:100%;
+  width: 100%;
   height: 44px;
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 12px;
   line-height: 16px;
-  color: #5E6C84;
-  background-color: #F9FAFC;
+  color: #5e6c84;
+  background-color: #f9fafc;
   font: inherit;
-  border: 1px solid #CDD2D4;
+  border: 1px solid #cdd2d4;
   border-radius: 5px;
   box-sizing: border-box;
 }
 
 .signup__email:focus {
   outline: none;
-  border:1px solid rgb(15, 74, 223);
-  box-shadow: 0 0 10px #719ECE;
+  border: 1px solid rgb(15, 74, 223);
+  box-shadow: 0 0 10px #719ece;
   transition-duration: 0.4s;
 }
 
 .signup__politics {
-  text-align:justify;
+  text-align: justify;
   margin-top: 10px;
   margin-bottom: 20px;
   font-size: 12px;
   line-height: 16px;
-  color: #5E6C84;
+  color: #5e6c84;
 }
 
 .signup__button {
-  color: hsl(0,0%,55%);
-  width:100%;
+  color: hsl(0, 0%, 55%);
+  width: 100%;
   height: 8%;
   font: inherit;
   border: none;
@@ -97,7 +98,7 @@ h1 {
 }
 
 .signup__with__button {
-  width:100%;
+  width: 100%;
   margin-top: 10px;
   font: inherit;
   box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
@@ -106,9 +107,9 @@ h1 {
   padding: 5px;
   align-items: center;
   border-radius: 5px;
-  text-align:center;
-  vertical-align:middle;
-  color: #5E6C84;
+  text-align: center;
+  vertical-align: middle;
+  color: #5e6c84;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -130,9 +131,8 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid hsl(0,0%,80%);
-  margin: 2em ;
-
+  border-top: 1px solid hsl(0, 0%, 80%);
+  margin: 2em;
 }
 .signup__language {
   display: flex;
@@ -150,13 +150,13 @@ hr {
 
 .signup__language-picker {
   background: none;
-  border: 2px solid #EDEFF0;
+  border: 2px solid #edeff0;
   height: 50px;
   padding: 0.5em;
 }
 
 a {
-  color: #0052CC;
+  color: #0052cc;
   text-decoration: none;
 }
 
@@ -182,7 +182,7 @@ a {
 
 @media (min-width: 640px) {
   .signup {
-    background-color: #F9FAFC;
+    background-color: #f9fafc;
     position: relative;
     z-index: 0;
     min-height: 100vh;
@@ -196,8 +196,8 @@ a {
     padding: 10px;
     height: 600px;
     max-width: 350px;
-    text-align:center;
-    background-color: #FFFFFF;
+    text-align: center;
+    background-color: #ffffff;
     border-radius: 3px;
     padding: 25px 40px;
     box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
@@ -206,31 +206,32 @@ a {
     margin-top: auto;
     margin-bottom: auto;
     justify-content: space-around;
-    font-family: "-apple-system",BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
-}
-.signup__header__logo {
-  margin-bottom: 40px;
-}
-.signup__footer__img {
-  display: inline;
-  visibility: visible;
-}
-.signup__footer__img1 {
-  z-index: -1;
-  position: fixed;
-  bottom: 0px;
-  left: 5px;
-  height: 200px;
-  width: 200px;
-}
-.signup__footer__img2 {
-  z-index: -1;
-  position: fixed;
-  bottom: 0px;
-  right: 5px;
-  height: 200px;
-  width: 200px;
-}
+    font-family: '-apple-system', BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  }
+  .signup__header__logo {
+    margin-bottom: 40px;
+  }
+  .signup__footer__img {
+    display: inline;
+    visibility: visible;
+  }
+  .signup__footer__img1 {
+    z-index: -1;
+    position: fixed;
+    bottom: 0px;
+    left: 5px;
+    height: 200px;
+    width: 200px;
+  }
+  .signup__footer__img2 {
+    z-index: -1;
+    position: fixed;
+    bottom: 0px;
+    right: 5px;
+    height: 200px;
+    width: 200px;
+  }
 }
 
 @media (min-width: 1200px) {
